@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-16T08:16:01Z",
+  "timestamp" : "2022-05-16T16:19:31Z",
   "count_outdated" : 267,
   "uniques_outdated" : 133,
-  "count" : 304,
-  "uniques" : 157,
+  "count" : 305,
+  "uniques" : 158,
   "clones" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
