@@ -1,5 +1,5 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 13,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
